#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([neb], [1.0], [kobayashi.ryo@nitech.ac.jp])
AC_CONFIG_SRCDIR([neb.F])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_F77
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([makefile])
AC_OUTPUT
